sgd/reproduction/playground/objects/User.object
<CustomObject>
    <fields>
        <fullName>EigyoGroup__c</fullName>
        <label>営業所</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EigyoTeam__c</fullName>
        <label>営業チーム</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_mail_to_Salesforce__c</fullName>
        <description>私のメールtoSalesforceを入力します。</description>
        <label>私のメールtoSalesforce</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ApproverFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>承認者フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_EmployeeId__c</fullName>
        <label>従業員番号</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_HornetId__c</fullName>
        <externalId>true</externalId>
        <label>HORNET ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SMAX_PS_IP_Tree_Fields__c</fullName>
        <label>ServiceMax IP Tree Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Is_Logged_In_User__c</fullName>
        <formula>IF(Username =  $User.Username , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Logged In User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Local_Name__c</fullName>
        <label>ローカル氏名</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAPLicense__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SAPライセンス保持者</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_Plant__c</fullName>
        <label>プラント</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1040</fullName>
                    <label>1040: HTS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_SalesGroup__c</fullName>
        <label>営業Gr.</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SMAX_PS_SAP_SalesOffice__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_SalesGroup</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_SalesOffice__c</fullName>
        <label>営業所</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_SalesOffice</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_SalesOrg__c</fullName>
        <label>販売組織</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_SalesOrg</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_WorkCenter__c</fullName>
        <label>作業区</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SMAX_PS_SAP_Plant__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>S000001</fullName>
                    <label>ATS 北海道SS</label>
                </value>
                <value>
                    <fullName>S000002</fullName>
                    <label>ATS 東北SS</label>
                </value>
                <value>
                    <fullName>S000003</fullName>
                    <label>ATS 栃木SS</label>
                </value>
                <value>
                    <fullName>S000004</fullName>
                    <label>ATS 千葉SS</label>
                </value>
                <value>
                    <fullName>S000005</fullName>
                    <label>ATS 鹿島SS</label>
                </value>
                <value>
                    <fullName>S000006</fullName>
                    <label>ATS つくばSS</label>
                </value>
                <value>
                    <fullName>S000007</fullName>
                    <label>ATS 埼玉SS</label>
                </value>
                <value>
                    <fullName>S000008</fullName>
                    <label>ATS 東京SS</label>
                </value>
                <value>
                    <fullName>S000009</fullName>
                    <label>ATS 西東京SS</label>
                </value>
                <value>
                    <fullName>S000010</fullName>
                    <label>ATS 横浜SS</label>
                </value>
                <value>
                    <fullName>S000011</fullName>
                    <label>ATS 富士SS</label>
                </value>
                <value>
                    <fullName>S000012</fullName>
                    <label>ATS 浜松SS</label>
                </value>
                <value>
                    <fullName>S000013</fullName>
                    <label>ATS 東海SS</label>
                </value>
                <value>
                    <fullName>S000014</fullName>
                    <label>ATS 名古屋SS</label>
                </value>
                <value>
                    <fullName>S000015</fullName>
                    <label>ATS 北陸SS</label>
                </value>
                <value>
                    <fullName>S000016</fullName>
                    <label>ATS 三重SS</label>
                </value>
                <value>
                    <fullName>S000017</fullName>
                    <label>ATS 京都SS</label>
                </value>
                <value>
                    <fullName>S000018</fullName>
                    <label>ATS 大阪SS</label>
                </value>
                <value>
                    <fullName>S000019</fullName>
                    <label>ATS 兵庫SS</label>
                </value>
                <value>
                    <fullName>S000020</fullName>
                    <label>ATS 岡山SS</label>
                </value>
                <value>
                    <fullName>S000021</fullName>
                    <label>ATS 広島SS</label>
                </value>
                <value>
                    <fullName>S000022</fullName>
                    <label>ATS 山口SS</label>
                </value>
                <value>
                    <fullName>S000023</fullName>
                    <label>ATS 九州SS</label>
                </value>
                <value>
                    <fullName>S000024</fullName>
                    <label>ATS 大分SS</label>
                </value>
                <value>
                    <fullName>S000025</fullName>
                    <label>ATS 熊本SS</label>
                </value>
                <value>
                    <fullName>S000026</fullName>
                    <label>ATS 四国SS</label>
                </value>
                <value>
                    <fullName>S000027</fullName>
                    <label>ATS 福島SS</label>
                </value>
                <value>
                    <fullName>S000028</fullName>
                    <label>P&amp;E  北海道SS</label>
                </value>
                <value>
                    <fullName>S000029</fullName>
                    <label>P&amp;E  東北SS</label>
                </value>
                <value>
                    <fullName>S000030</fullName>
                    <label>P&amp;E  栃木SS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Dispatch_Console_Settings__c</fullName>
        <label>Dispatch Console Settings</label>
        <length>64000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__FaceTime_ID__c</fullName>
        <description>User&apos;s FaceTime login ID. Used to make FaceTime calls in ServiceMax iPad Client. If this is left blank, user&apos;s phone number and email are used for the call.</description>
        <inlineHelpText>Enter this user&apos;s FaceTime login ID if available. This is used to make FaceTime calls in ServiceMax iPad Client. If this is left blank, user&apos;s phone number and email are used for the call.</inlineHelpText>
        <label>FaceTime ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Is_Super_Dispatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate if user is Super Dispatcher.</description>
        <inlineHelpText>Flag to indicate if user is Super Dispatcher.</inlineHelpText>
        <label>Is Super Dispatcher?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Select__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__ServiceMax_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate if User is a ServiceMax User</description>
        <label>ServiceMax User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesOrganize1__c</fullName>
        <label>販売組織1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOrganize2__c</fullName>
        <label>販売組織２</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingAnonWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingAnonWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingBestBets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingBestBets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingEmailActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingEmailActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingGroupedWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingGroupedWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingInterestingMomentsList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingInterestingMomentsList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingScoringList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingScoringList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingStreamList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingStreamList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingWatchList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingWatchList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__Sales_Insight_Counter__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Marketo Sales Insight Welcome Counter</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>Account</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>久保</value>
        </filters>
        <label>アカウント確認用</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>SalesOrganize1__c</columns>
        <columns>SalesOrganize2__c</columns>
        <columns>EigyoGroup__c</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>EigyoTeam__c</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>すべてのユーザ</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>SV</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SVMXC__ServiceMax_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>contains</operation>
            <value>horiba</value>
        </filters>
        <label>HORIBA_ServicemaxUser</label>
        <language>ja</language>
        <sharedTo>
            <group>SMAX_PS_HTS_Account_R_W</group>
            <group>SMAX_PS_HTS_Other_Object_R_W</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Test</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>equals</operation>
            <value>nagur</value>
        </filters>
        <label>Test</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>